results/SpecGenBench/2-shot/log-UglyNum-2023_11_06_14_59_09.txt
class UglyNum {
    //@ requires n > 0;
    //@ ensures \result == true <==> (\exists int i; 0 <= i && i < factors.length; n == 1 || n % factors[i] != 0);
    public static boolean isUgly(int n) {
        if (n <= 0) {
            return false;
        }
        int[] factors = {2, 3, 5};
        //@ maintaining (\forall int i; 0 <= i && i < factors.length; n % factors[i] != 0);
        //@ decreases n;
        for (int i = 0; i < factors.length; i++) {
            int factor = factors[i];
            //@ maintaining (\exists int j; 0 <= j && j < i; n == 1 || n % factors[j] != 0);
            //@ decreases n;
            while (n % factor == 0) {
                n /= factor;
            }
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/UglyNum.java:3: error: cannot find symbol
    //@ ensures \result == true <==> (\exists int i; 0 <= i && i < factors.length; n == 1 || n % factors[i] != 0);
                                                                   ^
  symbol:   variable factors
  location: class UglyNum
/home/max/Documents/JMLGPT/tmp/UglyNum.java:3: error: cannot find symbol
    //@ ensures \result == true <==> (\exists int i; 0 <= i && i < factors.length; n == 1 || n % factors[i] != 0);
                                                                                                 ^
  symbol:   variable factors
  location: class UglyNum
/home/max/Documents/JMLGPT/tmp/UglyNum.java:9: error: variable i is already defined in method isUgly(int)
        //@ maintaining (\forall int i; 0 <= i && i < factors.length; n % factors[i] != 0);
                                     ^
3 errors

